semre of relationships but more work required

--- a/ckanext/odm_laws/templates/laws/snippets/related_datasets.html
+++ b/ckanext/odm_laws/templates/laws/snippets/related_datasets.html
@@ -1,37 +1,65 @@
-{% block odm_laws_semre_of_database_relationships %}
-  <h2>Parent documents</h2>
-  <p>
-    <!-- get all parents with the current dataset as the subject  -->
+{% block odm_laws_semre_of_database_relationships %} {% set pkg = c.pkg_dict %} {% set pkg_dict = c.pkg_dict %}
 
-    {% for entry in h.odm_laws_semre_of_database_relationships(c=c,viewpoint='subject') %}
-      {%set dataset_id=entry.__extras.object_package_id%}
-        <ul>
-          <!-- display related document -->
-          <li>
+<div class="semre_of_relationships">
+  <div class="cell">
+    <span class="parents">
+      <ul>
+        {% for entry in h.odm_laws_semre_of_database_relationships(c=c,viewpoint='subject') %} {%set dataset_id=entry.__extras.object_package_id%} {%set object=entry.__extras.object_package_id%}
+        <!-- display related document -->
+        <li>
+
+            {% if object[0]['name'] is defined %}
+              <a href="{{h.url_for(controller='package',action='read',id=dataset_id)}}" target="_blank">
+              {{h.odm_laws_get_dataset_name(object[0]['name'])}}
+              </a>
+              <!-- also get notes and truncate -->
+               <span class="notes">{{h.odm_laws_get_dataset_notes(dataset_id, truncate='true')}}</span>
+            {% else %}
+              &nbsp;
+            {% endif %}
+
+
+
+        </li>
+        {% endfor %}
+      </ul>
+    </span>
+  </div>
+
+  <div class="cell">
+    <span class="separator">}</span>
+  </div>
+
+  <div class="cell">
+    <span class="this">
+      {{ pkg.title or pkg.name }}
+    </span>
+  </div>
+  <div class="cell">
+    <span class="separator">}</span>
+  </div>
+  <div class="cell">
+    <span class="children">
+      <ul>
+        {% for entry in h.odm_laws_semre_of_database_relationships(c=c,viewpoint='object') %} {%set dataset_id=entry.__extras.subject_package_id%}{%set subject=entry.__extras.subject_package_id%}
+        <li>
+          {% if subject is defined %}
             <a href="{{h.url_for(controller='package',action='read',id=dataset_id)}}" target="_blank">
-              {{h.odm_laws_get_dataset_name(entry.__extras.object_package_id)[0]['name']}}
-
+              {{subject}}
+              {#{h.odm_laws_get_dataset_name(subject[0]['name'])}#}
             </a>
+            <!-- also get notes and truncate -->
+            <span class="notes">{{h.odm_laws_get_dataset_notes(dataset_id, truncate='false')}}</span>
 
-          </li>
-        </ul>
-    {% endfor %}
-  </p>
+          {% else %}
+            &nbsp;
+          {% endif %}
 
-  <h2>Child documents</h2>
-  <p>
-
-    {% for entry in h.odm_laws_semre_of_database_relationships(c=c,viewpoint='object') %}
-      {%set dataset_id=entry.__extras.subject_package_id%}
-        <ul>
-          <li>
-            <a href="{{h.url_for(controller='package',action='read',id=dataset_id)}}" target="_blank">
-              {{h.odm_laws_get_dataset_name(entry.__extras.subject_package_id)[0]['name']}}
-            </a>
-          </li>
-        </ul>
-    {% endfor %}
-  </p>
-
-  <hr>
-{% endblock %}
+        </li>
+        {% endfor %}
+      </ul>
+    </span>
+  </div>
+</div>
+<div class="clearfix"></div>
+<hr> {% endblock %}
