--- a/ckanext/odm_laws/templates/laws/base.html
+++ b/ckanext/odm_laws/templates/laws/base.html
@@ -1,4 +1,8 @@
 {% extends "page.html" %}
+{% block styles %}
+  {{ super() }}
+  {% resource 'odm_laws/odm_laws.css' %}
+{% endblock %}
 
 {% set pkg = c.pkg_dict or pkg_dict %}
 
