--- a/ckanext/odm_laws/templates/laws/snippets/related_datasets.html
+++ b/ckanext/odm_laws/templates/laws/snippets/related_datasets.html
@@ -8,15 +8,15 @@
         <!-- display related document -->
         <li>
 
-            {% if object[0]['name'] is defined %}
+            {#% if  is defined %#}
               <a href="{{h.url_for(controller='package',action='read',id=dataset_id)}}" target="_blank">
-              {{h.odm_laws_get_dataset_name(object[0]['name'])}}
+              {{h.odm_laws_get_dataset_name(entry.__extras.object_package_id)[0]['name']}}
               </a>
               <!-- also get notes and truncate -->
                <span class="notes">{{h.odm_laws_get_dataset_notes(dataset_id, truncate='true')}}</span>
-            {% else %}
+            {#% else %}
               &nbsp;
-            {% endif %}
+            {% endif %#}
 
 
 
@@ -43,17 +43,17 @@
       <ul>
         {% for entry in h.odm_laws_semre_of_database_relationships(c=c,viewpoint='object') %} {%set dataset_id=entry.__extras.subject_package_id%}{%set subject=entry.__extras.subject_package_id%}
         <li>
-          {% if subject is defined %}
+          {#% if subject is defined %#}
             <a href="{{h.url_for(controller='package',action='read',id=dataset_id)}}" target="_blank">
-              {{subject}}
-              {#{h.odm_laws_get_dataset_name(subject[0]['name'])}#}
+
+              {{h.odm_laws_get_dataset_name(entry.__extras.subject_package_id)[0]['name']}}
             </a>
             <!-- also get notes and truncate -->
             <span class="notes">{{h.odm_laws_get_dataset_notes(dataset_id, truncate='false')}}</span>
 
-          {% else %}
+          {#% else %}
             &nbsp;
-          {% endif %}
+          {% endif %#}
 
         </li>
         {% endfor %}
