representation working + description bug fixed

--- a/ckanext/odm_laws/templates/laws/snippets/package_basic_fields.html
+++ b/ckanext/odm_laws/templates/laws/snippets/package_basic_fields.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
   {% block package_basic_fields_description %}
-  {{ form.markdown('notes', id='field-description', is_required=true, label=_('Short summary of content'), placeholder=_('Describe general purpose and scope'), value=data.description, error=errors.description) }}
+  {{ form.markdown('notes', id='field-description', is_required=true, label=_('Short summary of content'), placeholder=_('Describe general purpose and scope'), value=data.notes, error=errors.notes) }}
 {% endblock %}
 
 
