--- a/ckanext/odm_laws/templates/laws/snippets/related_datasets.html
+++ b/ckanext/odm_laws/templates/laws/snippets/related_datasets.html
@@ -4,19 +4,19 @@
   <div class="cell">
     <span class="parents">
       <ul>
-        {% for entry in h.odm_laws_semre_of_database_relationships(c=c,viewpoint='subject') %} {%set dataset_id=entry.__extras.object_package_id%} {%set object=entry.__extras.object_package_id%}
+        {% for entry in h.odm_laws_semre_of_database_relationships(c=c,viewpoint='subject') %} {%set dataset_id=entry.__extras.object_package_id%}
         <!-- display related document -->
         <li>
 
-            {#% if  is defined %#}
+            {% if h.odm_laws_get_dataset_name(entry.__extras.object_package_id)[0]['name'] is defined %}
               <a href="{{h.url_for(controller='package',action='read',id=dataset_id)}}" target="_blank">
               {{h.odm_laws_get_dataset_name(entry.__extras.object_package_id)[0]['name']}}
               </a>
               <!-- also get notes and truncate -->
                <span class="notes">{{h.odm_laws_get_dataset_notes(dataset_id, truncate='true')}}</span>
-            {#% else %}
+            {% else %}
               &nbsp;
-            {% endif %#}
+            {% endif %}
 
 
 
@@ -41,9 +41,9 @@
   <div class="cell">
     <span class="children">
       <ul>
-        {% for entry in h.odm_laws_semre_of_database_relationships(c=c,viewpoint='object') %} {%set dataset_id=entry.__extras.subject_package_id%}{%set subject=entry.__extras.subject_package_id%}
+        {% for entry in h.odm_laws_semre_of_database_relationships(c=c,viewpoint='object') %} {%set dataset_id=entry.__extras.subject_package_id%}
         <li>
-          {#% if subject is defined %#}
+          {% if h.odm_laws_get_dataset_name(entry.__extras.subject_package_id)[0]['name'] is defined %}
             <a href="{{h.url_for(controller='package',action='read',id=dataset_id)}}" target="_blank">
 
               {{h.odm_laws_get_dataset_name(entry.__extras.subject_package_id)[0]['name']}}
@@ -51,9 +51,9 @@
             <!-- also get notes and truncate -->
             <span class="notes">{{h.odm_laws_get_dataset_notes(dataset_id, truncate='false')}}</span>
 
-          {#% else %}
+          {% else %}
             &nbsp;
-          {% endif %#}
+          {% endif %}
 
         </li>
         {% endfor %}
