--- a/ckanext/odm_laws/templates/header.html
+++ b/ckanext/odm_laws/templates/header.html
@@ -2,5 +2,5 @@
 
 {% block header_site_navigation_tabs %}
  {{ super() }}
- <li><a href="/laws">Laws</a></li>
+ <li><a href="/laws"> {% trans %}Laws{% endtrans %}</a></li>
 {% endblock %}
