--- a/ckanext/odm_laws/templates/header.html
+++ b/ckanext/odm_laws/templates/header.html
@@ -2,5 +2,5 @@
 
 {% block header_site_navigation_tabs %}
  {{ super() }}
- <li>{% link_for _('Laws'), controller='ckanext.odm_laws.controller:LawsController', type='laws_record', action='search' %}</li>
+ <li>{% link_for _('Laws'), controller='package', type='laws_record', action='search' %}</li>
 {% endblock %}
