little template correction

--- a/ckanext/odm_laws/templates/package/search.html
+++ b/ckanext/odm_laws/templates/package/search.html
@@ -3,6 +3,8 @@
 {% block subtitle %}
 	{% if dataset_type == 'laws_record' %}
 		{{ _("Laws") }}
+	{% else %}
+		{{super()}}
 	{% endif %}
 {% endblock %}
 
