--- a/ckanext/odm_laws/templates/package/read.html
+++ b/ckanext/odm_laws/templates/package/read.html
@@ -12,16 +12,20 @@
 		<div class="cell">
 			<span class="parents">
 				<ul>
-					{% for entry in h.odm_laws_semre_of_database_relationships(c=c,viewpoint='subject') %} {%set dataset_id=entry.__extras.object_package_id%}
+
+					{% for entry in h.odm_laws_semre_of_database_relationships(c=c,viewpoint='subject') %}
+          {%set dataset_id=entry.__extras.object_package_id%}
 					<!-- display related document -->
 					<li>
 						{% if h.odm_laws_get_dataset_name(entry.__extras.object_package_id)[0]['name'] is defined %}
-						<a href="{{h.url_for(controller='package',action='read',id=dataset_id)}}" target="_blank">
-	              {{h.odm_laws_get_dataset_name(entry.__extras.object_package_id)[0]['name']}}
-	              </a>
-						<!-- also get notes and truncate -->
-						<span class="notes">{{h.odm_laws_get_dataset_notes(dataset_id, truncate='true')}}</span>
-						{% else %} &nbsp; {% endif %}
+  						<a href="{{h.url_for(controller='package',action='read',id=dataset_id)}}" target="_blank">
+                {{h.odm_laws_get_dataset_name(entry.__extras.object_package_id)[0]['name']}}
+              </a>
+			        <!-- also get notes and truncate -->
+              <span class="notes">{{h.odm_laws_get_dataset_notes(dataset_id, truncate='true')}}</span>
+						{% else %}
+              &nbsp;
+            {% endif %}
 					</li>
 					{% endfor %}
 				</ul>
@@ -43,18 +47,18 @@
 		<div class="cell">
 			<span class="children">
 				<ul>
-					{% for entry in h.odm_laws_semre_of_database_relationships(c=c,viewpoint='object') %} {%set dataset_id=entry.__extras.subject_package_id%}
+					{% for entry in h.odm_laws_semre_of_database_relationships(c=c,viewpoint='object') %}
+          {%set dataset_id=entry.__extras.subject_package_id%}
 					<li>
 						{% if h.odm_laws_get_dataset_name(entry.__extras.subject_package_id)[0]['name'] is defined %}
-						<a href="{{h.url_for(controller='package',action='read',id=dataset_id)}}" target="_blank">
-
+						  <a href="{{h.url_for(controller='package',action='read',id=dataset_id)}}" target="_blank">
 	              {{h.odm_laws_get_dataset_name(entry.__extras.subject_package_id)[0]['name']}}
 	            </a>
-						<!-- also get notes and truncate -->
-						<span class="notes">{{h.odm_laws_get_dataset_notes(dataset_id, truncate='false')}}</span>
-
-						{% else %} &nbsp; {% endif %}
-
+						  <!-- also get notes and truncate -->
+  						<span class="notes">{{h.odm_laws_get_dataset_notes(dataset_id, truncate='false')}}</span>
+            {% else %}
+              &nbsp;
+            {% endif %}
 					</li>
 					{% endfor %}
 				</ul>
