--- a/ckanext/odm_laws/templates/package/read.html
+++ b/ckanext/odm_laws/templates/package/read.html
@@ -1,72 +1,81 @@
 {% ckan_extends %}
 
-{% resource 'odm_laws/odm_laws.css' %}
-
 {% block package_description %}
+
   {{ super() }}
 
-	{% block odm_laws_semre_of_database_relationships %}
-	{% set pkg_dict = c.pkg_dict %}
+  {% if dataset_type == 'laws_record' %}
 
-	<div class="semre_of_relationships">
-		<div class="cell">
-			<span class="parents">
-				<ul>
+    {% block odm_laws_semre_of_database_relationships %}
+     {% set pkg_dict = c.pkg_dict %}
 
-					{% for entry in h.odm_laws_semre_of_database_relationships(c=c,viewpoint='subject') %}
-          {%set dataset_id=entry.__extras.object_package_id%}
-					<!-- display related document -->
-					<li>
-						{% if h.odm_laws_get_dataset_name(entry.__extras.object_package_id)[0]['name'] is defined %}
-  						<a href="{{h.url_for(controller='package',action='read',id=dataset_id)}}" target="_blank">
-                {{h.odm_laws_get_dataset_name(entry.__extras.object_package_id)[0]['name']}}
-              </a>
-			        <!-- also get notes and truncate -->
-              <span class="notes">{{h.odm_laws_get_dataset_notes(dataset_id, truncate='true')}}</span>
-						{% else %}
-              &nbsp;
-            {% endif %}
-					</li>
-					{% endfor %}
-				</ul>
-			</span>
-		</div>
+      <div class="semre_of_relationships">
+        <div class="cell">
+          <span class="parents">
+            <ul>
+              {% set dataset_id = pkg_dict.id %}
+              {% for entry in h.odm_laws_semre_of_database_relationships(dataset_id,viewpoint='subject') %}
+                <li>
+                  {% set related_dataset_id = entry.__extras.object_package_id%}
+                  {% set related_dataset_name = h.odm_laws_get_dataset_name(related_dataset_id) %}
+                  {% if related_dataset_name %}
+                    <a href="{{h.url_for(controller='package', type='laws_record', action='read', id=related_dataset_id)}}" target="_blank">
+                      {{ related_dataset_name }}
+                    </a>
+                    {% set related_dataset_notes = h.odm_laws_get_dataset_notes(related_dataset_id, True) %}
+                    {% if related_dataset_notes %}
+                      <span class="notes">{{ related_dataset_notes }}</span>
+                    {% endif %}
+                  {% else %}
+                    &nbsp;
+                  {% endif %}
+                </li>
+              {% endfor %}
+            </ul>
+          </span>
+        </div>
 
-		<div class="cell">
-			<span class="separator">}</span>
-		</div>
+        <div class="cell">
+          <span class="separator">}</span>
+        </div>
 
-		<div class="cell">
-			<span class="this">
-				{{ pkg.title or pkg.name }}
-			</span>
-		</div>
-		<div class="cell">
-			<span class="separator">}</span>
-		</div>
-		<div class="cell">
-			<span class="children">
-				<ul>
-					{% for entry in h.odm_laws_semre_of_database_relationships(c=c,viewpoint='object') %}
-          {%set dataset_id=entry.__extras.subject_package_id%}
-					<li>
-						{% if h.odm_laws_get_dataset_name(entry.__extras.subject_package_id)[0]['name'] is defined %}
-						  <a href="{{h.url_for(controller='package',action='read',id=dataset_id)}}" target="_blank">
-	              {{h.odm_laws_get_dataset_name(entry.__extras.subject_package_id)[0]['name']}}
-	            </a>
-						  <!-- also get notes and truncate -->
-  						<span class="notes">{{h.odm_laws_get_dataset_notes(dataset_id, truncate='false')}}</span>
-            {% else %}
-              &nbsp;
-            {% endif %}
-					</li>
-					{% endfor %}
-				</ul>
-			</span>
-		</div>
-	</div>
-	<div class="clearfix"></div>
-	<hr>
-	{% endblock %}
+        <div class="cell">
+          <span class="this">
+            {{ pkg.title or pkg.name }}
+          </span>
+        </div>
+        <div class="cell">
+          <span class="separator">}</span>
+        </div>
+        <div class="cell">
+          <span class="children">
+            <ul>
+              {%set dataset_id = pkg.id %}
+              {% for entry in h.odm_laws_semre_of_database_relationships(dataset_id,viewpoint='object') %}
+              <li>
+                {% set related_dataset_id = entry.__extras.subject_package_id%}
+                {% set related_dataset_name = h.odm_laws_get_dataset_title(related_dataset_id) %}
+                {% if related_dataset_name %}
+                  <a href="{{h.url_for(controller='package', type='laws_record' , action='read', id=related_dataset_id)}}" target="_blank">
+                    {{ related_dataset_name }}
+                  </a>
+                  {% set related_dataset_notes = h.odm_laws_get_dataset_notes(related_dataset_id, True) %}
+                  {% if related_dataset_notes %}
+                    <span class="notes">{{ related_dataset_notes }}</span>
+                  {% endif %}
+                {% else %}
+                  &nbsp;
+                {% endif %}
+              </li>
+              {% endfor %}
+            </ul>
+          </span>
+        </div>
+      </div>
+      <div class="clearfix"></div>
+      <hr>
+    {% endblock %}
+
+  {% endif%}
 
 {% endblock %}
