--- a/ckanext/odm_laws/templates/package/read.html
+++ b/ckanext/odm_laws/templates/package/read.html
@@ -39,7 +39,7 @@
 	        </div>
 
 	        <div class="cell">
-	          <span class="separator">}</span>
+	          <span class="separator">></span>
 	        </div>
 
 	        <div class="cell">
@@ -48,7 +48,7 @@
 	          </span>
 	        </div>
 	        <div class="cell">
-	          <span class="separator">}</span>
+	          <span class="separator">></span>
 	        </div>
 	        <div class="cell">
 	          <span class="children">
