reordered laws detail page

--- a/ckanext/odm_laws/fanstatic/odm_laws.css
+++ b/ckanext/odm_laws/fanstatic/odm_laws.css
@@ -30,3 +30,15 @@
   vertical-align: middle;
     padding: 10px;
 }
+
+img.pdf_thumbnail{
+	-webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.15);
+	-moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.15);
+	box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.15);
+	width: 110px;
+}
+.law_record_resources{
+	float: right;
+	width: 520px;
+	margin-top: 20px;
+}
