Implemented pdf thumbnail in sidebar for laws

--- a/ckanext/odm_laws/templates/package/read_base.html
+++ b/ckanext/odm_laws/templates/package/read_base.html
@@ -19,3 +19,42 @@
 		{{super()}}
 	{% endif%}
 {% endblock %}
+
+{% block secondary_content %}
+
+  {% block secondary_help_content %}{% endblock %}
+
+  {% block package_info %}
+    {% snippet 'package/snippets/info.html', pkg=pkg %}
+  {% endblock %}
+
+	{% if dataset_type == 'laws_record' %}
+		{% block odm_laws_pdf_thumbnail %}
+			{% set resources = c.pkg_dict.resources %}
+			{% for resource in resources%}
+				{% if resource.name == 'PDF Thumbnail' %}
+					<h2 class="module-heading"><i class="icon-building"></i> {{ _('Document preview') }}</h2>
+					<div class="pdf_thumbnail">
+						<img src='{{resource.url}}'>
+					</div>
+				{% endif %}
+			{% endfor %}
+		{% endblock%}
+	{% endif%}
+
+  {% block package_organization %}
+    {% if pkg.organization %}
+      {% set org = h.get_organization(pkg.organization.name) %}
+      {% snippet "snippets/organization.html", organization=org, has_context_title=true %}
+    {% endif %}
+  {% endblock %}
+
+  {% block package_social %}
+    {% snippet "snippets/social.html" %}
+  {% endblock %}
+
+  {% block package_license %}
+    {% snippet "snippets/license.html", pkg_dict=pkg %}
+  {% endblock %}
+
+{% endblock %}
