--- a/ckanext/odm_laws/fanstatic/odm_laws.css
+++ b/ckanext/odm_laws/fanstatic/odm_laws.css
@@ -8,60 +8,76 @@
  	font-size: 12px;
 }
 
-.semre_of_relationships ul{margin:0;}
-  .semre_of_relationships ul li{
-    list-style: none;
-    line-height: 20px;
-  }
+.semre_of_relationships ul{
+  margin:0;
+}
+
+.semre_of_relationships ul li{
+  list-style: none;
+  line-height: 20px;
+}
 .semre_of_relationships span{
   float: left;
 }
-    span.notes{
-      font-size:10px;
-      display: none;
-    }
+
+span.notes{
+  font-size:10px;
+  display: none;
+}
+
 .semre_of_relationships .separator{
   font-size: 36px;
   color: rgb(224,224,224);
 }
-.clearfix{clear: both;}
+.clearfix{
+  clear: both;
+}
+
 .cell{
   display:table-cell;
   vertical-align: middle;
     padding: 10px;
 }
 
-img.pdf_thumbnail{
+.pdf_thumbnail{
+  width: 100%;
+  text-align: center;
+  margin: 20px 0;
+}
+
+.pdf_thumbnail img{
 	-webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.15);
 	-moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.15);
 	box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.15);
-	width: 110px;
-	margin-left: 20px;
 }
+
 .law_record_resources{
-	float: right;
-  width: 500px;
+	/*float: right;
+  width: 500px;*/
   margin-top: 20px;
 }
-	.law_record_resources .resource_item_explore_links{
-		float: right;
-		margin-right:35px;
-	}
-		.law_record_resources .resource_item_explore_links a{
-			padding-right: 5px;
-			text-decoration: none!important;
 
-		}
+.law_record_resources .resource_item_explore_links{
+	float: right;
+	margin-right:35px;
+}
 
-	.law_record_resources .description{
-		display: none;
-	}
+.law_record_resources .resource_item_explore_links a{
+	padding-right: 5px;
+	text-decoration: none!important;
+}
+
+.law_record_resources .description{
+	display: none;
+}
+
 .resource_explore_icon{
 	width:20px;
 }
-	.resource_explore_icon-eye{
-		width: 24px;
-	}
+
+.resource_explore_icon-eye{
+	width: 24px;
+}
 
 .law_record_resources .resource-item{
 	min-height: 30px;
@@ -78,5 +94,5 @@ img.pdf_thumbnail{
 .semre_of_relationships{
 	border: 1px solid rgb(230,230,230);
 	border-radius: 8px;
-
+  margin-bottom: 20px;
 }
