removing unneded blocks

--- a/ckanext/odm_laws/templates/package/read_base.html
+++ b/ckanext/odm_laws/templates/package/read_base.html
@@ -22,12 +22,6 @@
 
 {% block secondary_content %}
 
-  {% block secondary_help_content %}{% endblock %}
-
-  {% block package_info %}
-    {% snippet 'package/snippets/info.html', pkg=pkg %}
-  {% endblock %}
-
 	{% if dataset_type == 'laws_record' %}
 		{% block odm_laws_pdf_thumbnail %}
 			{% set resources = c.pkg_dict.resources %}
@@ -42,19 +36,6 @@
 		{% endblock%}
 	{% endif%}
 
-  {% block package_organization %}
-    {% if pkg.organization %}
-      {% set org = h.get_organization(pkg.organization.name) %}
-      {% snippet "snippets/organization.html", organization=org, has_context_title=true %}
-    {% endif %}
-  {% endblock %}
-
-  {% block package_social %}
-    {% snippet "snippets/social.html" %}
-  {% endblock %}
-
-  {% block package_license %}
-    {% snippet "snippets/license.html", pkg_dict=pkg %}
-  {% endblock %}
+  {{super()}}
 
 {% endblock %}
