--- a/ckanext/odm_laws/templates/scheming/form_snippets/odm_laws_relationship_target.html
+++ b/ckanext/odm_laws/templates/scheming/form_snippets/odm_laws_relationship_target.html
@@ -2,9 +2,9 @@
 	<div class="control-group">
 		<label class="control-label" for="field-odm_laws_relationship_target">{{ h.scheming_language_text(field.label) }}</label>
 		<div class="controls control-full">
-			<select id="field-odm_laws_relationship_target" name="{{ h.scheming_language_text(field.field_name) }}" data-module="autocomplete" placeholder="{{ _("e.g. Law on ....") }}">
+			<select id="field-odm_laws_relationship_target" name="{{ h.scheming_language_text(field.field_name) }}" data-module="autocomplete" placeholder="{{ _("e.g. Law on ...") }}">
 				<option disabled selected>--{{ _("Select an associated document") }} --</option>
-				{% for dataset in h.odm_laws_lookup_relationship_target() %}
+				{% for dataset in h.odm_nav_get_all_laws_records() %}
 					<option value="{{ dataset }}">{{ dataset }}</option>
 				{% endfor %}
 			</select>
