--- a/ckanext/odm_laws/templates/scheming/form_snippets/odm_laws_issuing_agency_parties.html
+++ b/ckanext/odm_laws/templates/scheming/form_snippets/odm_laws_issuing_agency_parties.html
@@ -4,7 +4,7 @@
 		<label class="control-label" for="field-odm_odm_laws_issuing_agency_parties">{{ h.scheming_language_text(field.label) }}</label>
 		<div class="controls control-full">
 			<select id="field-odm_laws_issuing_agency_parties" name="{{ h.scheming_language_text(field.field_name) }}" data-module="autocomplete" placeholder="{{ _(h.scheming_language_text(field.form_placeholder)) }}">
-				{% for issuing_agency in h.odm_laws_get_values_from_datatable('749dc5bd-748a-498c-8ab0-5169de8b3fbe','id','Issuing_Agency') %}
+				{% for issuing_agency in h.odm_laws_get_values_from_datatable(h.odm_laws_get_resource_id_for_field('odm_laws_issuing_agency_parties'),'id','Issuing_Agency') %}
 					<option value="{{ issuing_agency['id'] }}">{{ issuing_agency['Issuing_Agency'] }}</option>
 				{% endfor %}
 			</select>
