--- a/ckanext/odm_laws/templates/scheming/form_snippets/odm_document_type.html
+++ b/ckanext/odm_laws/templates/scheming/form_snippets/odm_document_type.html
@@ -1,11 +1,14 @@
-
 {% block package_metadata_fields_odm_document_type %}
 	<div class="control-group">
 		<label class="control-label" for="field-odm_odm_document_type">{{ h.scheming_language_text(field.label) }}</label>
 		<div class="controls control-full">
-			<select id="field-odm_document_type" name="{{ h.scheming_language_text(field.field_name) }}" data-module="autocomplete" placeholder="{{ _(h.scheming_language_text(field.form_placeholder)) }}">
-				{% for document_type in h.odm_laws_get_values_from_datatable(h.odm_laws_get_resource_id_for_field('odm_document_type'),'id','document_type') %}
-					<option value="{{ document_type['id'] }}">{{ document_type['document_type'] }}</option>
+			<select id="field-odm_document_type"
+				name="{{ h.scheming_language_text(field.field_name) }}"
+				data-module="autocomplete"
+				placeholder="{{ _(h.scheming_language_text(field.form_placeholder)) }}"
+				class="odm_spatial_range-specific">
+				{% for document_type in h.odm_dataset_get_resource_from_datatable(h.odm_laws_get_resource_id_for_field('odm_document_type')) %}
+					<option data-country_codes="{{ document_type['country_codes'] }}" value="{{ document_type['id'] }}">{{ document_type['document_type'] }}</option>
 				{% endfor %}
 			</select>
 		</div>
