--- a/ckanext/odm_laws/templates/scheming/form_snippets/odm_laws_issuing_agency_parties.html
+++ b/ckanext/odm_laws/templates/scheming/form_snippets/odm_laws_issuing_agency_parties.html
@@ -9,7 +9,7 @@
 				placeholder="{{ _(h.scheming_language_text(field.form_placeholder)) }}"
 				class="odm_spatial_range-specific">
 				{% for issuing_agency in h.odm_dataset_get_resource_from_datatable(h.odm_laws_get_resource_id_for_field('odm_laws_issuing_agency_parties')) %}
-					<option data-country_codes="{{ issuing_agency['country_codes'] }}" value="{{ issuing_agency['id'] }}">{{ issuing_agency['issuing_Agency'] }}</option>
+					<option data-country_codes="{{ issuing_agency['country_codes'] }}" value="{{ issuing_agency['id'] }}">{{ issuing_agency['issuing_agency'] }}</option>
 				{% endfor %}
 			</select>
 		</div>
