--- a/ckanext/odm_laws/templates/scheming/form_snippets/odm_laws_implementing_agencies.html
+++ b/ckanext/odm_laws/templates/scheming/form_snippets/odm_laws_implementing_agencies.html
@@ -1,15 +1,15 @@
 
 {% block package_metadata_fields_odm_implementing_agencies %}
 	<div class="control-group">
-		<label class="control-label" for="field-odm_odm_implementing_agencies">{{ h.scheming_language_text(field.label) }}</label>
+		<label class="control-label" for="field-{{ field.field_name }}">{{ h.scheming_language_text(field.label) }}</label>
 		<div class="controls control-full">
-			<select id="field-odm_implementing_agencies"
+			<select multiple id="field-{{ field.field_name }}"
 				name="{{ h.scheming_language_text(field.field_name) }}"
 				data-module="autocomplete"
 				placeholder="{{ _(h.scheming_language_text(field.form_placeholder)) }}"
 				class="odm_spatial_range-specific">
 				{% for implementing_agency in h.odm_dataset_get_resource_from_datatable(h.odm_laws_get_resource_id_for_field('odm_laws_implementing_agencies')) %}
-					<option data-country_codes="{{ implementing_agency['country_codes'] }}" value="{{ implementing_agency['id'] }}">{{ implementing_agency['implementing_agency_name'] }}</option>
+					<option {{"selected " if implementing_agency['id'] in data[field.field_name] }} data-country_codes="{{ implementing_agency['country_codes'] }}" value="{{ implementing_agency['id'] }}">{{ implementing_agency['implementing_agency_name'] }}</option>
 				{% endfor %}
 			</select>
 		</div>
