--- a/ckanext/odm_laws/templates/scheming/form_snippets/odm_laws_issuing_agency_parties.html
+++ b/ckanext/odm_laws/templates/scheming/form_snippets/odm_laws_issuing_agency_parties.html
@@ -8,8 +8,8 @@
 				data-module="autocomplete"
 				placeholder="{{ _(h.scheming_language_text(field.form_placeholder)) }}"
 				class="odm_spatial_range-specific">
-				{% for issuing_agency in h.odm_dataset_get_resource_from_datatable(h.odm_laws_get_resource_id_for_field('odm_laws_issuing_agency_parties')) %}
-					<option {{"selected " if issuing_agency['id'] == data[field.field_name] }} data-country_codes="{{ issuing_agency['country_codes'] }}" value="{{ issuing_agency['id'] }}">{{ issuing_agency['issuing_agency'] }}</option>
+				{% for issuing_agency in h.odm_dataset_get_resource_from_datatable(h.odm_dataset_get_resource_id_for_field('odm_laws_issuing_agency_parties')) %}
+					<option {{"selected " if issuing_agency['id'] in data[field.field_name] }} data-country_codes="{{ issuing_agency['country_codes'] }}" value="{{ issuing_agency['id'] }}">{{ issuing_agency['issuing_agency'] }}</option>
 				{% endfor %}
 			</select>
 		</div>
