--- a/ckanext/odm_laws/templates/scheming/form_snippets/odm_document_type.html
+++ b/ckanext/odm_laws/templates/scheming/form_snippets/odm_document_type.html
@@ -1,8 +1,8 @@
 {% block package_metadata_fields_odm_document_type %}
 	<div class="control-group">
-		<label class="control-label" for="field-odm_odm_document_type">{{ h.scheming_language_text(field.label) }}</label>
+		<label class="control-label" for="field-{{ field.field_name }}">{{ h.scheming_language_text(field.label) }}</label>
 		<div class="controls control-full">
-			<select id="field-odm_document_type"
+			<select id="field-{{ field.field_name }}"
 				name="{{ h.scheming_language_text(field.field_name) }}"
 				data-module="autocomplete"
 				placeholder="{{ _(h.scheming_language_text(field.form_placeholder)) }}"
