--- a/ckanext/odm_laws/templates/scheming/form_snippets/odm_laws_status.html
+++ b/ckanext/odm_laws/templates/scheming/form_snippets/odm_laws_status.html
@@ -7,7 +7,7 @@
 				data-module="autocomplete"
 				placeholder="{{ _(h.scheming_language_text(field.form_placeholder)) }}">
 				{% for laws_status in h.odm_dataset_get_resource_from_datatable(h.odm_dataset_get_resource_id_for_field('odm_laws_status')) %}
-					<option {{"selected " if laws_status['id'] == data[field.field_name] }} data-country-codes="{{ laws_status['country_codes'] }}" value="{{ laws_status['id'] }}">{{ laws_status['status_name'] }}</option>
+					<option {{"selected " if laws_status['id'] == data[field.field_name] }} data-country-codes="{{ laws_status['country_codes'] }}" value="{{ laws_status['id'] }}">{{ laws_status['name'] }}</option>
 				{% endfor %}
 			</select>
 		</div>
