--- a/ckanext/odm_laws/templates/package/read_base.html
+++ b/ckanext/odm_laws/templates/package/read_base.html
@@ -22,14 +22,18 @@
 
 {% block secondary_content %}
 
-  {% if dataset_type == 'laws_record' and not h.odm_laws_check_required_fields(pkg) %}
-    {% block inconsistency_disclaimer %}
-      <h2 class="module-heading"><i class="icon-alert"></i> {{ _("Record metadata not complete!!") }}</h2>
-      <div class="disclaimer">
-        <p>{{ _('This record is missing some mandatory fields, please complete.') }}</p>
-      </div>
-    {% endblock %}
-  {% endif %}
+	{% if dataset_type == 'laws_record' %}
+		{% set missing_laws = h.odm_laws_check_required_fields(pkg) %}
+		{% if missing_laws["package"] or missing_laws["resources"] %}
+			{% block inconsistency_disclaimer_laws %}
+				<h2 class="module-heading"><i class="icon-alert"></i> {{ _("Record metadata not complete!!") }}</h2>
+				<div class="disclaimer">
+					<p>{{ _('This law record is missing some mandatory fields, please complete:') }}</p>
+					<p>{{ h.odm_laws_check_required_fields(pkg) }}</p>
+				</div>
+			{% endblock %}
+		{% endif %}
+	{% endif %}
 
 	{% if dataset_type == 'laws_record' %}
 		{% block odm_laws_pdf_thumbnail %}
