--- a/ckanext/odm_laws/templates/package/read_base.html
+++ b/ckanext/odm_laws/templates/package/read_base.html
@@ -22,7 +22,7 @@
 
 {% block secondary_content %}
 
-	{% if dataset_type == 'laws_record' %}
+	{% if dataset_type == 'laws_record' and c.userobj %}
 		{% set missing_laws = h.odm_laws_validate_fields(pkg) %}
 		{% if missing_laws["package"] or missing_laws["resources"] %}
 			{% block inconsistency_disclaimer_laws %}
